--- a/htdocs/bimpapple/objects/InternalStock.yml
+++ b/htdocs/bimpapple/objects/InternalStock.yml
@@ -42,17 +42,32 @@ forms:
     default: 
         rows: 
             serialized: unset
-        qty_tot: 
-            display_if: unset
+            qty_tot: 
+                display_if: unset
+            description: 
+                field: description
+            product_label: 
+                field: product_label
+            code_eee: 
+                field: code_eee
+            last_pa: 
+                field: last_pa
             
     edit: 
         rows: 
             unextends: 1
+            description: 
+                field: description
+            product_label: 
+                field: product_label
+            code_eee: 
+                field: code_eee
             last_pa: 
                 field: last_pa
             
     csv_import: 
         rows: 
+            - field: code_centre
             - custom: 1
               label: Fichier
               input_name: file
@@ -72,5 +87,8 @@ lists:
         title: Stocks internes
         cols: 
             serials: unset
+            description: 
+            product_label: 
+            code_eee: 
             last_pa: 
                 edit: 1
