Maj Signature bon destruction SAV
Former-commit-id: 23ba8c8528eaea82f6b7320e2448ddad957e2a7b

--- a/htdocs/bimpsupport/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/objects/BS_SAV.yml
@@ -1731,6 +1731,8 @@ signatures:
         label: Bon de restitution SAV
     sav_facture: 
         label: Facture SAV
+    sav_destruct: 
+        label: Bon de destruction SAV
         
 pages: 
     default: 
