Maj Signature bon destruction SAV
Former-commit-id: 4715ca75900062030bedde352d9c571e03cafbbd

--- a/htdocs/bimpcore/objects/BimpSignataire.yml
+++ b/htdocs/bimpcore/objects/BimpSignataire.yml
@@ -356,6 +356,8 @@ forms:
               input_name: signature
               input: 
                   type: signature_pad
+                  check_mentions: 
+                      callback: getCheckMentions
               required: 1
                   
     signature_params: 
