Maj Images tâches
Former-commit-id: bfc6499110db4ad26e6acae8e3639fa5dbef70bd

--- a/htdocs/bimptask/objects/BIMP_Task.yml
+++ b/htdocs/bimptask/objects/BIMP_Task.yml
@@ -185,9 +185,6 @@ fields_tables:
             - label: Notifier
               value: 
                   callback: displayUserNotif
-            - label: Images liées
-              value: 
-                  callback: renderImages
         
 forms:
     default: 
@@ -429,7 +426,14 @@ views:
                     col_sm: 12
                     custom: 
                         callback: renderLogsList
-          
+            images: 
+                cols: 
+                    - type: custom
+                      custom: 
+                          callback: 
+                              method: renderImages
+                              params: 
+                                  - 1
             sous_taches: 
                 cols:
                   - type: custom
