--- a/htdocs/bimpcore/extends/entities/bimp/objects/Bimp_Societe.yml
+++ b/htdocs/bimpcore/extends/entities/bimp/objects/Bimp_Societe.yml
@@ -14,4 +14,9 @@ fields_tables:
         rows: 
             entrepot_spare:
                 field: entrepot_spare
+                
+forms:
+    default:
+        rows:
+            - field: entrepot_spare
         
