Debug date input
Former-commit-id: 6314f2ab2110c35381f70a6fef2f826586cd32af

--- a/htdocs/bimpequipment/extends/entities/bimp/objects/Equipment.yml
+++ b/htdocs/bimpequipment/extends/entities/bimp/objects/Equipment.yml
@@ -3,6 +3,7 @@ fields:
     date_fin_spare:
         label: Date de fin de spare
         type: date
+        null_allowed: 1
         show:
             callback: as_client_spare_or_date
         
