Ajout groupe actioncomm
Former-commit-id: 118cb498379676ac61365fcda314fe83fa60440b

--- a/htdocs/bimpcore/objects/Bimp_ActionComm.yml
+++ b/htdocs/bimpcore/objects/Bimp_ActionComm.yml
@@ -271,7 +271,6 @@ forms:
                 required: 1
             users_assigned: 
                 custom: 1
-                required: 1
                 label: Evénement assigné à
                 input_name: users_assigned
                 input: 
@@ -281,6 +280,16 @@ forms:
                         callback: displayExternalUsers
                 value:
                     callback: getUsersAssigned
+            usergroups_assigned: 
+                custom: 1
+                label: Assigner aux utilisateurs d'un ou plusieurs groupes
+                input_name: usergroups_assigned
+                input: 
+                    multiple: 1
+                    type: select
+                    options: 
+                        array: userGroups
+                    help: Après enregistrement, tous les utilisateurs du groupe seront ajoutés au champ "Evénement assigné à"
             occupied: 
                 label: Disponibilité
                 field: transparency
