--- a/htdocs/bimpcommercial/objects/Bimp_CommandeFourn.yml
+++ b/htdocs/bimpcommercial/objects/Bimp_CommandeFourn.yml
@@ -121,6 +121,7 @@ fields:
     date_creation: 
         label: Créée le
         type: datetime
+        dol_prop: date_creation
     date_valid: 
         label: Validée le
         type: datetime
