CRT rapport Apple
Former-commit-id: 6581452c95636d3e6dae2e7bd2e0c98ee8fe5360

--- a/htdocs/bimpcore/objects/Bimp_Societe.yml
+++ b/htdocs/bimpcore/objects/Bimp_Societe.yml
@@ -726,6 +726,18 @@ fields:
     consigne_ref_ext:
         label: Consigne référence externe
         type: text
+        
+    type_educ: 
+        label: Type éducation
+        values: 
+            array: types_educ
+            
+    type_educ_fin_validite: 
+        label: Date de fin de validité (Enseignants / étudiants)
+        type: date
+        display_if: 
+            field_name: type_educ
+            show_values: E4
 
 fields_tables: 
     identity:
@@ -743,6 +755,10 @@ fields_tables:
             - field: nom
             - field: name_alias
             - field: fk_typent
+            - field: type_educ
+              edit: 1
+            - field: type_educ_fin_validite
+              edit: 1
             - field: client
               show: 
                   callback: isClient
@@ -1034,6 +1050,10 @@ forms:
                 display_if: 
                     field_name: is_company
                     show_values: 1
+            type_educ: 
+                field: type_educ
+            type_educ_fin_validite: 
+                field: type_educ_fin_validite
             mode_reglement: 
                 field: mode_reglement
             cond_reglement: 
