--- a/htdocs/bimpcommercial/objects/Bimp_Facture.yml
+++ b/htdocs/bimpcommercial/objects/Bimp_Facture.yml
@@ -66,8 +66,22 @@ objects:
                 
     facture_source:
         extends: facture
+        instance: 
+            id_object: 
+                field_value: fk_facture_source
+        
+    client_final: 
+        extends: client
+        instance: 
+            id_object: 
+                field_value: id_client_final
         
 fields: 
+    id_client_final: 
+        label: Client final
+        type: id_object
+        object: client_final
+        default_value: 0
     exported:
         label: Etat comptable
         type: int
@@ -896,6 +910,7 @@ fields_tables:
             - label: Remises client
               value: 
                   callback: displayRemisesClient
+            - field: id_client_final
             
     payment:
         rows:
