Maj config contrats
Former-commit-id: b88be30e6450ed2d7ff30859f00ba7e8472cab05

--- a/htdocs/bimpcontract/bimpcontract.yml
+++ b/htdocs/bimpcontract/bimpcontract.yml
@@ -62,5 +62,9 @@ params:
                       type: bool
                       def: 0
                   id_responsable_general: 
-                      label: Identifiant du responsable général
+                      label: ID du responsable général
                       def: 1414
+                  id_responsable_education: 
+                      label: ID du responsable éducation
+                  id_responsable_commercial: 
+                      label: ID du responsable commercial
