--- a/htdocs/bimpsupport/controllers/index.yml
+++ b/htdocs/bimpsupport/controllers/index.yml
@@ -67,6 +67,10 @@ sections:
         default:
             label: Hotline
             icon: fas_headset
+            show: 
+                conf: 
+                    module: bimpsupport
+                    name: use_tickets
             sections:
                 - type: list
                   list: 
