--- a/htdocs/bimpsupport/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/objects/BS_SAV.yml
@@ -569,157 +569,194 @@ fields:
 forms: 
     default:
         rows: 
-            - field: replaced_ref
-            - field: code_centre
-            - field: code_centre_repa
-            - field: id_client
-            - field: id_contact
-            - field: id_equipment
-            - custom: 1
-              label: Conserver l'équipement dans son emplacement actuel
-              input_name: keep_equipment_current_place
-              data_type: bool
-              content: 
-                  callback: renderEquipmentPlaceOptionInput
-              display_if: 
-                  field_name: id_equipment
-                  hide_values: 0,
-              depends_on: id_equipment
-            - field: symptomes
-            - field: id_contrat
-            - field: prioritaire
-            - field: acompte
-            - label: Mode de paiement de l'acompte
-              custom: 1
-              data_type: int
-              input_name: mode_paiement_acompte
-              input: 
-                  type: select_payment
-                  include_empty: 1
-              display_if: 
-                  field_name: acompte
-                  hide_values: 0,
-              value: 6
-            - field: system
-            - field: login_admin
-            - field: pword_admin
-            - field: contact_pref
-            - field: accessoires
-            - field: etat_materiel
-            - field: etat_materiel_desc
-            - field: save_option
-            - field: sav_pro
-            - field: prestataire_number
-            - custom: 1
-              label: Notifier le client de la création du SAV
-              input_name: send_msg
-              data_type: bool
-              input: 
-                  type: toggle
-              value: 1
-            - field: id_ticket
-              hidden: 1
-            - field: sacs
-            - object: files
-              multiple: 1
-#            - custom: 1
-#              label: Fichier
-#              input_name: file
-#              input: 
-#                  type: file_upload
-#            - custom: 1
-#              label: Fichier 2
-#              input_name: file2
-#              input: 
-#                  type: file_upload
+            replaced_ref: 
+                field: replaced_ref
+            code_centre: 
+                field: code_centre
+            code_centre_repa: 
+                field: code_centre_repa
+            id_client: 
+                field: id_client
+            id_contact: 
+                field: id_contact
+            id_equipment: 
+                field: id_equipment
+            keep_equipment_current_place: 
+                custom: 1
+                label: Conserver l'équipement dans son emplacement actuel
+                input_name: keep_equipment_current_place
+                data_type: bool
+                content: 
+                    callback: renderEquipmentPlaceOptionInput
+                display_if: 
+                    field_name: id_equipment
+                    hide_values: 0,
+                depends_on: id_equipment
+            symptomes: 
+                field: symptomes
+            id_contrat:  
+                field: id_contrat
+            prioritaire: 
+                field: prioritaire
+            acompte: 
+                field: acompte
+            mode_paiement_acompte: 
+                label: Mode de paiement de l'acompte
+                custom: 1
+                data_type: int
+                input_name: mode_paiement_acompte
+                input: 
+                    type: select_payment
+                    include_empty: 1
+                display_if: 
+                    field_name: acompte
+                    hide_values: 0,
+                value: 6
+            system: 
+                field: system
+            login_admin: 
+                field: login_admin
+            pword_admin: 
+                field: pword_admin
+            contact_pref: 
+                field: contact_pref
+            accessoires: 
+                field: accessoires
+            etat_materie: 
+                field: etat_materiel
+            etat_materiel_desc: 
+                field: etat_materiel_desc
+            save_option: 
+                field: save_option
+            sav_pro: 
+                field: sav_pro
+            prestataire_number: 
+                field: prestataire_number
+            send_msg: 
+                custom: 1
+                label: Notifier le client de la création du SAV
+                input_name: send_msg
+                data_type: bool
+                input: 
+                    type: toggle
+                value: 1
+            id_ticket: 
+                field: id_ticket
+                hidden: 1
+            sacs: 
+                field: sacs
+            files: 
+                object: files
+                multiple: 1
               
     prise_en_charge: 
         rows: 
-            - field: code_centre
-              edit: 0
-            - field: code_centre_repa
-            - field: id_client
-            - field: id_contact
-            - field: id_equipment
-            - custom: 1
-              label: Conserver l'équipement dans son emplacement actuel
-              input_name: keep_equipment_current_place
-              data_type: bool
-              content: 
-                  callback: renderEquipmentPlaceOptionInput
-              display_if: 
-                  field_name: id_equipment
-                  hide_values: 0,
-              depends_on: id_equipment
-            - field: symptomes
-            - field: id_contrat
-            - field: prioritaire
-            - field: acompte
-            - label: Mode de paiement de l'acompte
-              custom: 1
-              data_type: int
-              input_name: mode_paiement_acompte
-              input: 
-                  type: select_payment
-                  include_empty: 1
-              display_if: 
-                  field_name: acompte
-                  hide_values: 0,
-              value: 6
-            - field: system
-            - field: login_admin
-            - field: pword_admin
-            - field: contact_pref
-            - field: accessoires
-            - field: etat_materiel
-            - field: etat_materiel_desc
-            - field: save_option
-            - field: sav_pro
-            - field: prestataire_number
-            - field: sacs
+            code_centre: 
+                field: code_centre
+                edit: 0
+            code_centre_repa: 
+                field: code_centre_repa
+            id_client: 
+                field: id_client
+            id_contact: 
+                field: id_contact
+            id_equipment: 
+                field: id_equipment
+            keep_equipment_current_place: 
+                custom: 1
+                label: Conserver l'équipement dans son emplacement actuel
+                input_name: keep_equipment_current_place
+                data_type: bool
+                content: 
+                    callback: renderEquipmentPlaceOptionInput
+                display_if: 
+                    field_name: id_equipment
+                    hide_values: 0,
+                depends_on: id_equipment
+            symptomes: 
+                field: symptomes
+            id_contrat: 
+                field: id_contrat
+            prioritaire: 
+                field: prioritaire
+            acompte: 
+                field: acompte
+            mode_paiement_acompte: 
+                label: Mode de paiement de l'acompte
+                custom: 1
+                data_type: int
+                input_name: mode_paiement_acompte
+                input: 
+                    type: select_payment
+                    include_empty: 1
+                display_if: 
+                    field_name: acompte
+                    hide_values: 0,
+                value: 6
+            system: 
+                field: system
+            login_admin: 
+                field: login_admin
+            pword_admin: 
+                field: pword_admin
+            contact_pref: 
+                field: contact_pref
+            accessoires: 
+                field: accessoires
+            etat_materiel: 
+                field: etat_materiel
+            etat_materiel_desc: 
+                field: etat_materiel_desc
+            save_option: 
+                field: save_option
+            sav_pro: 
+                field: sav_pro
+            prestataire_number: 
+                field: prestataire_number
+            sacs: 
+                field: sacs
               
     edit: 
         rows: 
-            - field: replaced_ref
-            - field: code_centre
-            - field: code_centre_repa
-            - field: id_client
-            - field: id_contact
-            - field: id_equipment
-            - field: prioritaire
-            - field: id_contrat
-            - field: prestataire_number
-            - field: id_user_tech
-            - field: system
-            - field: login_admin
-            - field: pword_admin
-            - field: sacs
-            - field: in_fac_emails_files
-#            - custom: 1 => Pourquoi mettre ça dans le form d'édition du SAV alors qu'il suffit d'aller dans l'onglet "Fichiers" > Ajouter un fichier ?
-#              label: Fichier
-#              input_name: file
-#              input: 
-#                  type: file_upload
-#            - custom: 1
-#              label: Fichier 2
-#              input_name: file2
-#              input: 
-#                  type: file_upload
-            - field: name_reseller
+            replaced_ref: 
+                field: replaced_ref
+            code_centre: 
+                field: code_centre
+            code_centre_repa: 
+                field: code_centre_repa
+            id_client: 
+                field: id_client
+            id_contact: 
+                field: id_contact
+            id_equipment: 
+                field: id_equipment
+            prioritaire: 
+                field: prioritaire
+            id_contrat: 
+                field: id_contrat
+            prestataire_number: 
+                field: prestataire_number
+            id_user_tech: 
+                field: id_user_tech
+            system: 
+                field: system
+            login_admin: 
+                field: login_admin
+            pword_admin: 
+                field: pword_admin
+            sacs: 
+                field: sacs
+            in_fac_emails_files: 
+                field: in_fac_emails_files
+            name_reseller: 
+                field: name_reseller
             
     public_edit: 
         rows: 
             - field: system
             - field: contact_pref
             - field: etat_materiel
-            - field: symptomes
-#            - object: client
-#              on_edit: 1
-#              form_name: public
-#            - object: contact
-#              on_edit: 1
-#              form_name: public_edit
-            
+            - field: symptomes            
             
     send_msg: 
         title: Envoi de notification
