--- a/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Product.yml
@@ -1,6 +1,10 @@
 # Entité : actimac
 
 fields: 
+    id_famille: 
+        label: Famille
+        type: id_object
+        
     categorie: unset
     collection: unset
     nature: unset
