--- a/htdocs/bimpcore/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/objects/Bimp_Product.yml
@@ -1162,6 +1162,9 @@ lists:
         checkboxes: 1
         configurable: 1
         bulk_actions:
+            - label: Supprimer les produits sélectionnés
+              icon: fas_trash-alt
+              onclick: deleteSelectedObjects('list_id', $(this))
             - label: étiquettes stock
               icon: fas_sticky-note
               onclick: setSelectedObjectsAction($(this), 'list_id', 'printEtiquettes', {'type':'stock'}, '', 'Générer les étiquettes ?', true)
@@ -1176,6 +1179,7 @@ lists:
         n: 50
         page_btn: 1
         edit_btn: 1
+        delete_btn: 1
         edit_form: card
         add_form_name: card
         modal_view: default
