--- a/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Product.yml
@@ -5,6 +5,9 @@ fields:
         label: Famille
         type: id_object
         
+    fabricant: 
+        label: Fabricant
+        
     categorie: unset
     collection: unset
     nature: unset
