Maj import actimac
Former-commit-id: 83738170105211bc215a03d976370687afebe03e

--- a/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/extends/entities/actimac/objects/Bimp_Product.yml
@@ -8,6 +8,11 @@ fields:
     fabricant: 
         label: Fabricant
         
+    import_actimac: 
+        label: Import Actimac
+        type: bool
+        default_value: 0
+        
     categorie: unset
     collection: unset
     nature: unset
