afficher produits désactivée
Former-commit-id: 8a148b6a65b9025d4e1967a5a5875ce0f7e1f1c9

--- a/htdocs/bimpcore/objects/Bimp_Product.yml
+++ b/htdocs/bimpcore/objects/Bimp_Product.yml
@@ -1306,14 +1306,15 @@ searches:
             - REPLACE(ROUND(a.price,2),'.',',') as price
             - a.stock
             - fpl.stockFourn as stockFournL
+            - a.tosell
         label_syntaxe: '<ref> - <label> - <price> € HT - Stock: [REDIFNEG]<stock>[/REDIFNEG] - Stock LDLC : <stockFournL>'
         order_by: rowid
         order_way: desc
         
     tosell: 
         extends: default
-        filters: 
-            a.tosell: 1
+        disabled: 
+            tosell: 1
             
     tobuy: 
         extends: default
