afficher produits désactivée
Former-commit-id: 9b46abbeac9a83159c43164f5d52ed480f70af3e

--- a/htdocs/bimpcore/objects/Bimp_Societe.yml
+++ b/htdocs/bimpcore/objects/Bimp_Societe.yml
@@ -1115,8 +1115,8 @@ forms:
                 display_if:
                     field_name: has_already_code_comptable_client
                     show_values: 1
-            outstanding_limit_atradius:
-                field: outstanding_limit_atradius
+#            outstanding_limit_atradius:
+#                field: outstanding_limit_atradius
             outstanding_limit: 
                 field: outstanding_limit
             outstanding_limit_credit_safe:
