--- a/htdocs/bimpcore/objects/Bimp_ProductFournisseurPrice.yml
+++ b/htdocs/bimpcore/objects/Bimp_ProductFournisseurPrice.yml
@@ -94,7 +94,7 @@ fields:
         
     stockFourn:
         label: Stock chez le fournisseur
-        type: int
+        type: float
     
 forms: 
     default: 
