--- a/htdocs/bimpsupport/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/objects/BS_SAV.yml
@@ -637,9 +637,6 @@ forms:
                 hidden: 1
             sacs: 
                 field: sacs
-            files: 
-                object: files
-                multiple: 1
             send_msg: 
                 custom: 1
                 label: Notifier le client de la création du SAV
@@ -656,6 +653,9 @@ forms:
                 input: 
                     type: toggle
                 value: 1
+            files: 
+                object: files
+                multiple: 1
                 
     prise_en_charge: 
         rows: 
@@ -872,6 +872,13 @@ forms:
               data_type: bool
               content: 
                   callback: renderEquipmentPlaceOptionInput
+            - custom: 1
+              label: Demander la signature du bon de restitution
+              input_name: create_signature_resti
+              data_type: bool
+              input: 
+                  type: toggle
+              value: 1
                   
     close_refused: 
         title: Fermeture
@@ -926,6 +933,13 @@ forms:
               display_if: 
                   field_name: bon_resti_raison
                   show_values: 99
+            - custom: 1
+              label: Demander la signature du bon de restitution
+              input_name: create_signature_resti
+              data_type: bool
+              input: 
+                  type: toggle
+              value: 1
               
     contact: 
         title: Recontacter
