--- a/htdocs/bimpcontract/objects/BContract_contrat.yml
+++ b/htdocs/bimpcontract/objects/BContract_contrat.yml
@@ -35,6 +35,14 @@ objects:
             id_object:
                 field_value: fk_soc
     
+    bimp_client:
+        instance:
+            bimp_object: 
+                module: bimpcore
+                name: Bimp_Client
+            id_object:
+                field_value: fk_soc
+                
     lines:
         relation: hasMany
         instance:
