Maj ws contrats
Former-commit-id: efc0f5d8278e7f991e83731c059937dd6bdaa63d

--- a/htdocs/bimpcontract/objects/BContract_contrat.yml
+++ b/htdocs/bimpcontract/objects/BContract_contrat.yml
@@ -36,6 +36,8 @@ objects:
                 field_value: fk_soc
     
     bimp_client:
+        relation: hasOne
+        delete: 0
         instance:
             bimp_object: 
                 module: bimpcore
