Maj ws contrats
Former-commit-id: 7da64fef132ab47a360ef9507943df321b1b03d9

--- a/htdocs/bimpcommercial/objects/BimpComm.yml
+++ b/htdocs/bimpcommercial/objects/BimpComm.yml
@@ -215,7 +215,7 @@ fields:
         type: money    
     model_pdf: 
         label: Modèle de document par défaut
-        dol_prop: modelpdf
+        dol_prop: model_pdf
         values: 
             array: modelsPdf
         sortable: 0
