--- a/htdocs/bimpsupport/extends/entities/actimac/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/extends/entities/actimac/objects/BS_SAV.yml
@@ -27,5 +27,5 @@ fields_tables:
             replaced_ref: unset
             id_ticket: unset
             # temporaire : 
-            public_link: unset 
+#            public_link: unset 
             
