emails émetteurs bimpcomm
Former-commit-id: 1dd7fba7b5e85d2cf30370d135ce9b0ea87bce3b

--- a/htdocs/bimpcommercial/bimpcommercial.yml
+++ b/htdocs/bimpcommercial/bimpcommercial.yml
@@ -107,6 +107,11 @@ params:
         label: Id du responsable des avoirs éducation
         def: 201
         
+    extra_emails_from: 
+        label: Adresse e-mails supplémentaires pour l'émetteur des envois d'e-mail des pièces commerciales.
+        info: Séparer chaque adresse e-mail par une virgule sans espace. 
+        def: ''
+        
     # PDFs: 
     pdf_add_cgv: 
         label: Ajouter CGV dans les docs PDF
