--- a/htdocs/bimpsupport/objects/BS_SAV.yml
+++ b/htdocs/bimpsupport/objects/BS_SAV.yml
@@ -873,12 +873,26 @@ forms:
               content: 
                   callback: renderEquipmentPlaceOptionInput
             - custom: 1
-              label: Demander la signature du bon de restitution
+              label: Demander la signature du bon de restitutionn
               input_name: create_signature_resti
               data_type: bool
               input: 
                   type: toggle
               value: 1
+            - custom: 1
+              label: Contact signataire
+              input_name: id_contact_signataire
+              data_type: id
+              input: 
+                  type: select
+                  options: 
+                      array: client_contacts
+                  help: Obligatoire pour les clients pros
+              value: 
+                  field_value: id_contact
+              display_if: 
+                  field_name: create_signature_resti
+                  show_values: 1
                   
     close_refused: 
         title: Fermeture
@@ -940,6 +954,20 @@ forms:
               input: 
                   type: toggle
               value: 1
+            - custom: 1
+              label: Contact signataire
+              input_name: id_contact_signataire
+              data_type: id
+              input: 
+                  type: select
+                  options: 
+                      array: client_contacts
+                  help: Obligatoire pour les clients pros
+              value: 
+                  field_value: id_contact
+              display_if: 
+                  field_name: create_signature_resti
+                  show_values: 1
               
     contact: 
         title: Recontacter
